<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
        android:background="@drawable/gradient_background">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="204dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/tvCityName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="wrap"
                tools:text="Nom de ville très long qui pourrait poser problème" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCityName"
                tools:text="Monday, 10 May 2023" />

            <ImageView
            android:id="@+id/ivWeatherIcon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateTime"
            tools:srcCompat="@drawable/ic_weather_sunny" />
        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textSize="64sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivWeatherIcon"
            tools:text="23°C" />

        <TextView
            android:id="@+id/tvWeatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTemperature"
            tools:text="Clear Sky with a bit of sunshine" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/card_background_light"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:columnCount="2"
                android:rowCount="3">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:orientation="vertical"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feels_like"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvFeelsLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="22°C" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="65%" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="fill_horizontal"
                    android:orientation="vertical"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="5 km/h" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="fill_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="1013 hPa" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="fill_horizontal"
                    android:orientation="vertical"
                    android:paddingEnd="8dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="6:42 AM" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="fill_horizontal"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    tools:ignore="RtlSymmetry">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset"
                        android:textColor="?android:attr/textColorSecondary"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="8:38 PM" />
                </LinearLayout>
            </GridLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardForecast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
    android:layout_marginEnd="16dp"
    app:cardBackgroundColor="@color/card_background_light"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecast"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvForecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_forecast"
            tools:itemCount="5"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>